# CogniCore

./: .gitignore  README.md  pyproject.toml  requirements.txt
cognicore/: __init__.py
cognicore/agents/: __init__.py  agent.py
cognicore/emotions/: __init__.py  engine.py
cognicore/goals/: __init__.py  goal_types.py
cognicore/llm/: __init__.py  client.py
cognicore/memory/: __init__.py  manager.py  memory_types.py
cognicore/planning/: __init__.py  planner.py
cognicore/rag/: __init__.py  vector_store.py
cognicore/relationships/: __init__.py  manager.py
cognicore/rumors/: __init__.py  rumor_system.py
cognicore/secrets/: __init__.py  secret_system.py
cognicore/simulation/: __init__.py  orchestrator.py
cognicore/social_graph/: __init__.py  graph.py
cognicore/world/: __init__.py  environment.py
demo/frontend/: index.html  package.json
docs/: implementation_plan.md
silent_hollow_demo/backend/: scenario.py  server.py
silent_hollow_demo/frontend/: README.md  index.html  package-lock.json
silent_hollow_demo/frontend/src/: App.css  App.jsx  index.css
silent_hollow_demo/frontend/src/components/: SocialGraphView.jsx  ThreeViewport.jsx
tests/: test_cognicore.py
