[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cognicore-sdk"
version = "0.1.1"
description = "A reusable Character Intelligence Framework and SDK for autonomous agents and game NPCs"
readme = "README.md"
authors = [
    { name = "Karthik Unnikrishnan" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests>=2.28.0",
    "pydantic>=2.0.0",
]
requires-python = ">=3.10"

[project.optional-dependencies]
openai = ["openai>=1.0.0"]
gemini = ["google-generativeai>=0.3.0"]
anthropic = ["anthropic>=0.5.0"]
all = [
    "openai>=1.0.0",
    "google-generativeai>=0.3.0",
    "anthropic>=0.5.0"
]

[tool.setuptools.packages.find]
include = ["cognicore*"]
